<resources>
    <string name="app_name">TorchApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="pickup_button_text">PICK UP</string>
    <string name="drop_button_text">Drop!</string>
    <string name="title_activity_drawer_map">DrawerMapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Olympic Torch App</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Map</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_achievements">Achievements</string>
    <string name="fragment_profile">Profile Fragment</string>
    <string name="fragment_achievements">Achievements Fragment</string>

    <string name="username">Username</string>
    /string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="log_in">Log In</string>
    <string name="register_underlined"><u>Register</u></string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="terms_of_service_first_text">I accept the</string>
    <string name="terms_of_service_second_text"><u>terms of service</u></string>
    <string name="register_button_text">Register User</string>

    <string name="terms_of_service">Our Terms of Service</string>
    <string name="personal_number">Personal Number</string>
    <string name="doctor_name">Doctor\'s name</string>
    <string name="back_button_image_description">Go back to previous screen</string>
    <string name="achievement_3_description">Ach3</string>
    <string name="timer_time">Mock</string>
    <string name="torch_title">Title</string>
    <string name="torch_created_by">Created By</string>
    <string name="torch_user">User</string>
    <string name="torch_created_on">On</string>
    <string name="torch_creation_date">Date</string>
    <string name="torch_traveled">Traveled</string>
    <string name="torch_traveled_distance">KM</string>
    <string name="torch_creator_torch_name">Torch Name</string>
    <string name="torch_creator_button_text">Create torch</string>
    <string name="private_torch">Private Torch</string>
    <string name="publlic_torch">Publlic Torch</string>
    <string name="ach_title">Title</string>
    <string name="ach_description">Description</string>
    <string name="ach_date">Date</string>
    <string name="your_achievements">Your Achievements</string>
    <string name="ach_reward">Reward</string>
</resources>
