<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Background image-->
    <View
        android:id="@+id/register_login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background" />

    <!--Blur effect for background-->
    <View
        android:id="@+id/register_login_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#000000" />

    <!--Guidelines for edges 15%-->
    <android.support.constraint.Guideline
        android:id="@+id/register_logo_left_edge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/register_logo_right_edge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/register_back_button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/register_logo_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/back_button_image_description"
        android:src="@drawable/ic_back_arrow_left"
        app:layout_constraintBottom_toTopOf="@+id/register_logo_guideline"
        app:layout_constraintEnd_toStartOf="@id/register_logo_left_edge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_back_button_guideline" />

    <TextView
        android:id="@+id/register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/logo_text"
        app:layout_constraintBottom_toBottomOf="@+id/register_logo_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_logo_guideline" />


    <android.support.constraint.Guideline
        android:id="@+id/register_inputs_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_username_edit_text_layout"
        style="@style/normal_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/register_inputs_guideline"
        app:layout_constraintEnd_toEndOf="@id/register_logo_right_edge"
        app:layout_constraintStart_toStartOf="@id/register_logo_left_edge"
        app:layout_constraintTop_toTopOf="@+id/register_inputs_guideline">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_username_edit_text"
            style="@style/normal_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_edit_text_layout"
        style="@style/normal_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/register_logo_right_edge"
        app:layout_constraintStart_toStartOf="@id/register_logo_left_edge"
        app:layout_constraintTop_toBottomOf="@+id/register_username_edit_text_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password_edit_text"
            style="@style/normal_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:id="@+id/register_last_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/register_register_button"
        style="@style/normal_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#ff5030"
        android:text="@string/register_button_text"
        app:layout_constraintEnd_toEndOf="@id/register_logo_right_edge"
        app:layout_constraintStart_toStartOf="@id/register_logo_left_edge"
        app:layout_constraintTop_toTopOf="@+id/register_last_guideline" />

</android.support.constraint.ConstraintLayout>