<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-26dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/torch_creator_textInputLayout"
            style="@style/normal_hint"
            android:layout_width="209dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/torch_creator_torch_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/torch_creator_textInputEditText"
                style="@style/normal_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                app:errorEnabled="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/torch_creator_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/torch_creator_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/torch_creator_textInputLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/torch_creator_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="Cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.802"
            app:layout_constraintStart_toEndOf="@+id/torch_creator_textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/torch_creator_create_button"
            app:layout_constraintVertical_bias="0.6" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/torch_creator_cancel_button"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/torch_creator_textInputLayout">


            <RadioButton
                android:id="@+id/torch_set_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/slightlyDarkerThanWhite"
                tools:targetApi="lollipop"
                android:checked="true"/>


            <RadioButton
                android:id="@+id/torch_set_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/slightlyDarkerThanWhite" />


        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/torch_creator_textInputLayout">

            <TextView
                style="@style/normal_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publlic_torch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="19dp">

            </TextView>

            <TextView
                style="@style/normal_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_torch" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>